--- a/OFFERS-303/es/index.html
+++ b/OFFERS-303/es/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
-	<title>"Bath Bombs" "Rainbow" ""</title>
+	<title>Bomba de baño "Rainbow"</title>
 <meta property="og:title" content="Бомба для ванной Радуга">
 <meta property="og:description" content="с эфирными маслами">
 <meta property="og:image" content="https://i.imgur.com/BtPJG1a.png">
@@ -22,37 +22,37 @@
 		<div class="intro__main">
 
 			<div class="intro__text">
-				<h2 class="left intro__title margin-left"> "Bath Bombs" "Rainbow" "με αιθέρια έλαια"</h2>
-				<div class="subtitle"> Μια σπα περιποίηση στο σπίτι σας!</div>
+				<h2 class="left intro__title margin-left"> Bomba de baño "Rainbow" con aceites esenciales</h2>
+				<div class="subtitle"> ¡Salón SPA en tu casa!</div>
 			</div>
 			<div class="triger">
-				<p> Το hit<br> της χρονιάς!</p>
+				<p> ¡Éxito de ventas<br> de 2021!</p>
 				<img src="img/triger.svg" alt>
 			</div>
 			<div class="prod">
 				<p class="sale">
-					<b> 50%</b> έκπτωση</p>
+					<b> 50%</b> descuento</p>
 				<div class="price">
 					<div class="old">
-						<span> Αρχική τιμή</span>
+						<span> Precio común</span>
 						<s> 98€</s>
 					</div>
 					<div class="new">
-						<span> Τιμή σε έκπτωση</span>
+						<span> Precio hoy</span>
 						<b> 49€</b>
 					</div>
 				</div>
 			</div>
-			<a href="#offer" class="btn"> ΠΑΡΑΓΓΕΛΙΑ</a>
+			<a href="#offer" class="btn"> Ordenar</a>
 			<div class="list">
 				<div class="list__item">
-					<p> Φυσική σύνθεση</p>
+					<p> Composición natural</p>
 				</div>
 				<div class="list__item">
-					<p> Αισθησιακό άρωμα</p>
+					<p> Aroma suave</p>
 				</div>
 				<div class="list__item">
-					<p> Χαλαρωτικό αποτέλεσμα</p>
+					<p> Efecto relajante</p>
 				</div>
 			</div>
 		</div>
@@ -61,101 +61,101 @@
 	<main class="main">
 		<section class="sect1">
 
-			<h2 class="center black"> Πλεονεκτήματα του bath bombs rainbow</h2>
+			<h2 class="center black"> Beneficios de un baño de bombas de arcoíris</h2>
 			<div class="sect1__main">
 				<div class="sect1__item">
-					<p> ΚΑΘΑΡΙΖΕΙ ΚΑΙ ΘΡΕΦΕΙ ΤΟ ΔΕΡΜΑ</p>
+					<p> Limpia y nutre la piel.</p>
 				</div>
 				<div class="sect1__item">
-					<p> ΕΧΕΙ ΤΟΝΩΤΙΚΕΣ ΚΑΙ ΑΝΑΖΩΟΓΟΝΗΤΙΚΕΣ ΙΔΙΟΤΗΤΕΣ</p>
+					<p> Tiene propiedades tónicas y refrescantes.</p>
 				</div>
 				<div class="sect1__item">
-					<p> ΕΧΕΙ ΧΑΛΑΡΩΤΙΚΟ ΑΠΟΤΕΛΕΣΜΑ</p>
+					<p> Tiene un efecto relajante.</p>
 				</div>
 				<div class="sect1__item">
-					<p> ΤΟ ΕΝΤΟΝΟ ΑΡΩΜΑ ΔΙΑΡΚΕΙ ΓΙΑ ΑΡΚΕΤΕΣ ΗΜΕΡΕΣ</p>
+					<p> Deliciosa fragancia dura varios días.</p>
 				</div>
 			</div>
-			<a href="#offer" class="btn"> ΠΑΡΑΓΓΕΛΙΑ</a>
+			<a href="#offer" class="btn"> Ordenar</a>
 			<br>
 			<iframe src="https://www.youtube.com/embed/YggmWbzhK50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</section>
 		<section class="sect2">
-			<h2 class="center black"> Μια πραγματική περιποίηση σπα στο σπίτι σας!</h2>
+			<h2 class="center black"> ¡Un verdadero tratamiento de spa en tu casa!</h2>
 			<img src="img/sect2.png" alt>
 			<p>
-				<b> Bath bombs rainbow</b> μετατρέπει το μπάνιο σας σε ένα σαλόνι σπα.<b> Τα αιθέρια έλαια καθαρίζουν απαλά, ενυδατώνουν και τονώνουν το δέρμα,</b> χωρίς να προκαλούν ερεθισμό ή ερυθρότητα. Ο φωτεινός πολύχρωμος σχεδιασμός, το ευχάριστο άρωμα, το όμορφο υδατικό χρώμα θα σας δώσουν μια αίσθηση εσωτερικής ελευθερίας και θα τονωθεί η διάθεση σας,<b> ανακουφίστε το άγχος και αφαιρέστε την κόπωση.</b>
+				<b> Bomba de arcoiris</b> transforma tu baño en un pequeño salón de spa.<b> Los aceites esenciales limpian, hidratan y tonifican suavemente la piel,</b> sin causar irritación o enrojecimiento en absoluto. Diseño multicolor brillante, agradable fragancia, hermoso color del agua dará una sensación de libertad interior, mejorar el estado de ánimo,<b> aliviará el estrés y eliminará la fatiga.</b>
 			</p>
 		</section>
 		<section class="sect3">
-			<h2 class="center t-white"> Για εκείνους που τους αρέσει να κάνουν μπάνιο με άνεση!</h2>
+			<h2 class="center t-white"> ¡Para aquellas personas que les gusta tomar un baño perfecto!</h2>
 			<div class="sect3__main grid">
 				<div class="sect3__item">
 					<img src="img/sect3-1.svg" alt>
-					<p> Μετά από ώρες δουλειάς</p>
+					<p> Después de la jornada laboral</p>
 				</div>
 				<div class="sect3__item">
 					<img src="img/sect3-2.svg" alt>
-					<p> Για ένα ρομαντικό δείπνο</p>
+					<p> Noche romántica</p>
 				</div>
 				<div class="sect3__item">
 					<img src="img/sect3-3.svg" alt>
-					<p> Για να τονώσετε την διάθεσή σας</p>
+					<p> Para elevar el estado de ánimo</p>
 				</div>
 				<div class="sect3__item">
 					<img src="img/sect3-4.svg" alt>
-					<p> Για παιδιά</p>
+					<p> Para niños</p>
 				</div>
 			</div>
 		</section>
 		<section class="sect4">
-			<h2 class="center black"> Πώς να χρησιμοποιήσετε τη bath bombs</h2>
+			<h2 class="center black"> ¿Cómo usar una bomba de baño?</h2>
 			<div class="sect4__main grid">
 				<div class="sect4__item">
 					<img src="img/sect4-1.png" alt>
-					<p> Γεμίστε την μπανιέρα σας με νερό σε μια άνετη για εσάς θερμοκρασία</p>
+					<p> Llena la bañera</p>
 				</div>
 				<div class="sect4__item">
 					<img src="img/sect4-2.png" alt>
-					<p> Βάλτε τη bath bombs στη μπανιέρα</p>
+					<p> Sumerge la bomba de baño en la bañera</p>
 				</div>
 				<div class="sect4__item">
 					<img src="img/sect4-3.png" alt>
-					<p> Περιμένετε να διαλυθεί εντελώς και ξαπλώστε</p>
+					<p> Espere a que se disuelva por completo</p>
 				</div>
 				<div class="sect4__item">
 					<img src="img/sect4-4.png" alt>
-					<p> Χρόνος μπάνιου - έως και 20-30 λεπτά</p>
+					<p> Tiempo de baño recomendado 20-30 minutos</p>
 				</div>
 			</div>
 		</section>
 		<section class="sect5">
-			<h2 class="center black"> Κριτικές πελατών</h2>
+			<h2 class="center black"> Opiniones de los clientes</h2>
 			<div class="reviews owl-carousel">
 
 				<div class="reviews__item">
-					<div class="reviews__top"> Μετά από μια δύσκολη μέρα στη δουλειά, μου αρέσει πολύ να ξαπλώνω στο μπάνιο, για μένα αυτό είναι ένα είδος χαλάρωσης. Και με τη bath bombs παίρνω διπλάσια ευχαρίστηση. Μου αρέσουν πολύ οι bath bombs rainbow, έχει ένα ευχάριστο άρωμα και μια φυσική σύνθεση, δεν χρωματίζει το μπάνιο και ούτε το δέρμα. Η τιμή του είναι προσιτή, τα χρησιμοποιώ 3-4 φορές την εβδομάδα, για χαλάρωση και περιποιείται το δέρμα τέλεια!</div>
+					<div class="reviews__top"> Después de un duro día de trabajo, me gusta mucho tomar un baño, para mí es una especie de relajación. Y con la bomba arcoíris, obtengo el doble de placer. Me gustan mucho las bombas con arcoíris, tiene un aroma agradable y una composición natural, no no deja manchas en la bañera, y tampoco en la piel. ¡Por el precio no es cara, las uso 3-4 veces a la semana, para la relajación y el cuidado de la piel es simplemente genial!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_1.png" alt class="ava">
-						<p><b> Αλεξάνδρα 31 ετών</b> <span> Πριν από 6 ημέρες</span></p>
+						<p><b> Alejandra 31 años</b> <span> Hace 6 días</span></p>
 						<br>
 
 					</div>
 				</div>
 				<div class="reviews__item">
-					<div class="reviews__top"> Μια έξυπνη bath bombs! Ελαφρύ ευχάριστο άρωμα, εξαιρετική ενυδάτωση και το νερό μετατρέπεται σε πραγματικό ουράνιο τόξο! Είναι ένα θέαμα θα το δείτε και μόνοι σας! Το συνιστώ!</div>
+					<div class="reviews__top"> ¡Una bomba de baño genial! Aroma ligero y agradable, excelente hidratación, ¡y el agua se convierte en un verdadero arcoíris! ¡Es un verdadero placer! ¡Recomiendo!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_2.png" alt class="ava">
-						<p><b> Βιολέττα, 22 ετών</b> <span> Πριν από 1 ημέρα</span></p>
+						<p><b> Claudia, 22 años</b> <span> Hace 1 día</span></p>
 						<br>
 
 					</div>
 				</div>
 				<div class="reviews__item">
-					<div class="reviews__top"> Το παιδί μου είναι χαρούμενο! Το παρήγγειλα για την κόρη μου, δεν της αρέσει να πλένεται, δεν ήξερα με τι να την εντυπωσιάσω. Της πρότεινα το bath bombs rainbow, το δοκίμασε και ξετρελάθηκε. Παραγγείλα και άλλα! Σας ευχαριστώ για τη γρήγορη παράδοση!</div>
+					<div class="reviews__top"> ¡Mi niña está encantada! Pedí las bombas de baño para mi hija, a ella no le gusta bañarse, no sabia qué hacer. Invité a mi hija a nadar en un verdadero arcoíris, ¡no había límite de su emocion! ¡Ordené más! ¡Gracias especiales por la entrega rápida!</div>
 					<div class="reviews__bottom">
 						<img src="img/ava_3.png" alt class="ava">
-						<p><b> Όλγα, 29 ετών</b> <span> Πριν 5 μέρες</span></p>
+						<p><b> Natalia, 29 años</b> <span> hace 5 días</span></p>
 						<br>
 
 					</div>
@@ -165,23 +165,23 @@
 		<br>
 		
 		<section class="sect6">
-			<h2 class="center t-white"> Πως να παραγγείλετε?</h2>
+			<h2 class="center t-white"> ¿Como ordenar?</h2>
 			<div class="sect6__main">
 				<div class="sect6__item">
-					<div class="top"><img src="img/sect6_1.svg" alt> <b> ΒΗΜΑ 1</b></div>
-					<p> Αφήστε ένα αίτημα στον ιστότοπό μας</p>
+					<div class="top"><img src="img/sect6_1.svg" alt> <b> Paso 1</b></div>
+					<p> Deja una solicitud en nuestro sitio web</p>
 				</div>
 				<div class="sect6__item">
-					<div class="top"><img src="img/sect6_2.svg" alt> <b> ΒΗΜΑ 2</b></div>
-					<p> Ο εκπρόσωπος μας θα επικοινωνήσει μαζί σας για να ολοκληρώσετε την παραγγελία σας</p>
+					<div class="top"><img src="img/sect6_2.svg" alt> <b> Paso 2</b></div>
+					<p> El encargado se comunica con usted usted para realizar el pedido.</p>
 				</div>
 				<div class="sect6__item">
-					<div class="top"><img src="img/sect6_3.svg" alt> <b> ΒΗΜΑ 3</b></div>
-					<p> Η παραγγελία παραδίδεται μέσω courier εντός 1-3 εργάσιμων ημερών</p>
+					<div class="top"><img src="img/sect6_3.svg" alt> <b> Paso 3</b></div>
+					<p> El pedido se entrega por mensajería dentro de 1-3 días.</p>
 				</div>
 				<div class="sect6__item">
-					<div class="top"><img src="img/sect6_4.svg" alt> <b> ΒΗΜΑ 4</b></div>
-					<p> Πληρώνετε για την παραγγελία κατά την παραλαβή</p>
+					<div class="top"><img src="img/sect6_4.svg" alt> <b> Paso 4</b></div>
+					<p> Usted paga el pedido al recibir</p>
 				</div>
 			</div>
 		</section>
@@ -189,23 +189,23 @@
 			<div class="intro__main">
 
 				<div class="intro__text">
-					<h2 class="left intro__title margin-left"> "Bath Bombs" "Rainbow" "με αιθέρια έλαια"</h2>
-					<div class="subtitle"> Μια σπα περιποίηση στο σπίτι σας!</div>
+					<h2 class="left intro__title margin-left"> Bomba de baño "Rainbow" con aceites esenciales</h2>
+					<div class="subtitle"> ¡Salón SPA en tu casa!</div>
 				</div>
 				<div class="triger">
-					<p> Το hit<br> της χρονιάς!</p>
+					<p> ¡Éxito de ventas<br> de 2021!</p>
 					<img src="img/triger.svg" alt>
 				</div>
 				<div class="prod">
 					<p class="sale">
-						<b> 50%</b> έκπτωση</p>
+						<b> 50%</b> descuento</p>
 					<div class="price">
 						<div class="old">
-							<span> Αρχική τιμή</span>
+							<span> Precio común</span>
 							<s> 98€</s>
 						</div>
 						<div class="new">
-							<span> Τιμή σε έκπτωση</span>
+							<span> Precio hoy</span>
 							<b> 49€</b>
 						</div>
 					</div>
@@ -213,10 +213,10 @@
 				<form id="offer" method="POST" class="form">
 					<div class="input-wrap">
 
-						<input type="text" name="name" required placeholder="Ονοματεπώνυμο">
+						<input type="text" name="name" required placeholder="Su nombre">
 					</div>
 					<div class="input-wrap">
-						<input type="text" name="phone" required placeholder="Τηλέφωνο">
+						<input type="text" name="phone" required placeholder="Su número de teléfono">
 					</div>
 <input name="offer_id" type="hidden" value="{offer_id}">
 <input name="geo" type="hidden" value>
@@ -224,7 +224,7 @@
 <input name="click_id" type="hidden" value="{click_id}">
 <input name="time_zone" type="hidden" value="+3">
 <input name="lang" type="hidden" value="RU">
-					<button class="btn"> ΠΑΡΑΓΓΕΛΙΑ</button>
+					<button class="btn"> Ordenar</button>
 				</form>
 
 			</div>
@@ -232,7 +232,7 @@
 
 		<div class="policy__bot">
 			<div class="policy_wrap">
-				<span> HOME GOODS LTD., 26th Oktovriou, 546 27, Thessaloniki, Greece</span>
+				<span> HOME GOODS LTD., Calle Juan de Dios, 10, 28015 Madrid, Spain</span>
 				<a href="/privacypolicy" target="_blank"> Privacy policy</a>
 				<a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>
 				<a href="/legal-warning" target="_blank"> Legal warning</a>
