--- a/OFFERS-344/it/index.html
+++ b/OFFERS-344/it/index.html
@@ -32,7 +32,7 @@
           <div class="value"> -50%</div>
         </div>
         <div class="price_item new">
-          <div class="text"> PEZZRO SCONTATO: </div>
+          <div class="text"> PREZZO SCONTATO: </div>
           <div class="value"> 49 €</div>
         </div>
       </div>
@@ -187,7 +187,7 @@
           <div class="value"> -50%</div>
         </div>
         <div class="price_item new">
-          <div class="text"> PEZZRO SCONTATO: </div>
+          <div class="text"> PREZZO SCONTATO: </div>
           <div class="value"> 49 €</div>
         </div>
       </div>
