--- a/OFFERS-338/es/index.html
+++ b/OFFERS-338/es/index.html
@@ -21,13 +21,13 @@
 	<header class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Uniwersalne licówki zdejmowane</p>
+				<p class="subtitle"> Carillas desmontables universales</p>
 				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Idealny uśmiech za jednym pociągnięciem!</p>
-				<div class="price"> <b class="nev"> 221 zł</b>
-					<s class="old"> 442 zł</s>
+				<p class="text"> ¡Sonrisa blanca perfecta en un solo paso!</p>
+				<div class="price"> <b class="nev"> 49€</b>
+					<s class="old"> 98€</s>
 
 				</div>
 			</div>
@@ -35,137 +35,137 @@
 
 		<div class="list">
 			<div class="list__item">
-				<p> Cienkie i wygodne</p>
+				<p> Delgadas y cómodas</p>
 			</div>
 			<div class="list__item">
-				<p> Rozmiar uniwersalny</p>
+				<p> Tamaño universal</p>
 			</div>
 			<div class="list__item">
-				<p> Hipoalergiczne</p>
+				<p> Hipoalergénico</p>
 			</div>
 			<div class="list__item">
-				<p> Trwały element mocujący </p>
+				<p> Fijador fuerte</p>
 			</div>
 		</div>
 		<br>
-		<a href="#offer" class="btn"> Złoż zamówienie</a>
+		<a href="#offer" class="btn"> Ordenar</a>
 		<br>
-		<div class="trigger"> Pozostała część zapasów na koniec promocji<b> 19 szt</b>
+		<div class="trigger"> Artículos en stock:<b> 19 pzs</b>
 		</div>
 		<br><br>
 	</header>
 
 	<main class="main">
 		<section class="sect1">
-			<h2 class=" sect-title"> Podstawowe zalety<b> Shiny Dentes</b></h2>
+			<h2 class=" sect-title"> Ventajas principales<b> Shiny Dentes</b></h2>
 			<div class="sect1__item">
 				<img src="img/sect1-1.png" alt>
-				<p><b> Szybkie wyniki</b> Natychmiastowa poprawa wyglądu zębów</p>
+				<p><b> Resultados rápidos</b> Mejora instantáneamente la apariencia de tus dientes.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-2.png" alt>
-				<p><b> Łatwość użycia</b> Zakładaj i zdejmuj, kiedy tylko chcesz.</p>
+				<p><b> Fácil de usar</b> Ponte y quítate cuando quieras.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-3.png" alt>
-				<p><b> Wygodne w noszeniu</b> Zaawansowany technologicznie materiał stomatologiczny jest niewiarygodnie cienki, a jednocześnie niezwykle mocny i wytrzymały. </p>
+				<p><b> Cómodo de llevar</b> El material dental de alta tecnología es increíblemente delgado, pero extremadamente resistente y duradero.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-4.png" alt>
-				<p><b> Ekonomiczne rozwiązanie</b> Bardziej przystępne cenowo niż inne zabiegi kosmetyczne.</p>
+				<p><b> Solución rentable</b> Más asequible que otros tratamientos de belleza.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-5.png" alt>
-				<p><b> Wielofunkcyjne</b> Ukryj swoje niedoskonałości, takie jak nierówne zęby, odpryski, pęknięcia, duże szczeliny, próchnica i ciemne szkliwo.</p>
+				<p><b> Multifuncional</b> Enmascare sus imperfecciones, como dientes desiguales, astillas, grietas, grandes espacios, caries y esmalte oscuro.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-6.png" alt>
-				<p><b> Środki przejściowe</b> Mogą być stosowane jako zęby tymczasowe podczas implantacji.</p>
+				<p><b> Medidas provisionales</b> Se puede utilizar como dientes temporales durante la implantación.</p>
 			</div>
 		</section>
 
 		<section class="sect2">
-			<h2 class="sect-title"> Wskazania do <b>  zastosowania</b></h2>
+			<h2 class="sect-title"> Indicación de uso<b> de uso</b></h2>
 			<div class="grid">
 				<div class="sect2__item">
 					<img src="img/sect2-1.png" alt>
-					<b> Ciemne szkliwo zębów</b>
+					<b> Esmalte oscurecida</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-2.png" alt>
-					<b> Nierównomierne uzębienie</b>
+					<b> Dientes torcidos</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-3.png" alt>
-					<b> Zęby o różnych wysokościach i kształtach</b>
+					<b> Dientes desiguales</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-4.png" alt>
-					<b> Wady szkliwa: pęknięcia, fugi</b>
+					<b> Defectos de esmalte: grietas, hipoplasia</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-5.png" alt>
-					<b> Szerokie szpary między zębami</b>
+					<b> Espacios grandes entre los dientes</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-6.png" alt>
-					<b> Brak jednego lub więcej zębów</b>
+					<b> Falta de uno o más dientes</b>
 				</div>
 			</div>
 			<br>
 			<br>
-			<a href="#offer" class="btn"> Złoż zamówienie</a>
+			<a href="#offer" class="btn"> Ordenar</a>
 		</section>
 
 		<section class="sect3">
-			<h2 class="sect-title"> Cechy charakterystyczne<b> Shiny Dentes</b></h2>
+			<h2 class="sect-title"> Particularidades de<b> Shiny Dentes</b></h2>
 			<div class="sect3__main">
-				<p> Posiadają uniwersalny rozmiar</p>
-				<p> Nie ciemnieją przez kilkadziesiąt lat</p>
-				<p> Mocno zakotwiczone na zębach</p>
-				<p> Brak dyskomfortu podczas użytkowania</p>
+				<p> Tienen un tamaño universal</p>
+				<p> No se oscurecen durante varias décadas</p>
+				<p> Se fijan firmemente en los dientes</p>
+				<p> No causan molestias al usar</p>
 
 			</div>
 		</section>
 		<section class="sect4">
 			<br>
-			<h2 class="sect-title"> Licówki - elinery <b> Shiny Dentes</b>
+			<h2 class="sect-title"> Carillas - alineadores<b> Shiny Dentes</b>
 			</h2>
 			<img src="img/sect4.png" alt>
-			<p class="text"> To jest prawdziwa rewolucja w nowoczesnej stomatologii! <b> Zdejmowane licówki Shiny Dentes przywrócą estetyczny i atrakcyjny wygląd Twojemu uśmiechowi.</b> Produkt taki jest w stanie zamaskować wszelkie wady zewnętrzne: wyszczerbienia zębów, pęknięcia, nierówności, zaciemnienia, dziury, krzywe rzędy i wady zgryzu. <br> <br> Można ich używać samodzielnie, ponieważ nie trzeba przeprowadzać wstępnego szlifowania lub innych manipulacji. <b> Ponadto, produkt jest zatwierdzony przez nowoczesnych dentystów w różnych krajach.</b> Licówki noszone przez dłuższy czas pomagają ukształtować prawidłowy zgryz i ustawienie zębów. </p>
+			<p class="text"> ¡Esta es una verdadera revolución en la odontología moderna!<b> Las carillas desmontables Shiny Dentes devolverán un aspecto estético y atractivo a la sonrisa.</b> Dicho dispositivo puede enmascarar cualquier defecto externo: astillas dentales, grietas, irregularidades, oscurecimiento, agujeros, curvatura de la fila y maloclusión.<br> <br> Puede ponerlas usted mismo, porque para esto no es necesario hacer tallado de dientes u otras manipulaciones.<b> Además, la herramienta está aprobada por los dentistas modernos de diferentes países.</b> Con el uso prolongado, las carillas ayudan a formar la mordida correcta y alinear los dientes.</p>
 			<br> <br>
-			<a href="#offer" class="btn"> Złoż zamówienie</a>
+			<a href="#offer" class="btn"> Ordenar</a>
 			<br> <br>
 		</section>
 		<section class="sect5">
 			<br>
-			<h2 class="sect-title"> Jak stosować<b> Shiny Dentes</b>
+			<h2 class="sect-title"> Cómo usar<b> Shiny Dentes</b>
 			</h2>
 			<br>
 			<div class="sect5__main">
 				<div class="sect5__item">
 					<img src="img/sect5_1.png" alt>
-					<p> Włożyć element podtrzymujący (w zestawie) do gorącej wody na 2 minuty.</p>
+					<p> Coloque los fijadores (viene incluido) en agua caliente durante 2 minutos.</p>
 				</div>
 				<div class="sect5__item">
 					<img src="img/sect5_2.png" alt>
-					<p> Mocno docisnąć retainery do zębów w celu uzyskania indywidualnego wycisku</p>
+					<p> Presione los fijadores firmemente contra los dientes para obtener forma de molde personalizada</p>
 				</div>
 				<div class="sect5__item">
 					<img src="img/sect5_3.png" alt>
-					<p> Załóż licówki i ciesz się idealnym uśmiechem</p>
+					<p> Ponga las carillas y disfruta de una hermosa sonrisa!</p>
 				</div>
 			</div>
 		</section>
 		<section class="sect6 ">
 			<br>
-			<h2 class="sect-title"> Referencje <b>  klientów</b></h2>
+			<h2 class="sect-title"> Comentarios de<b> compradores</b></h2>
 			<br>
 			<br>
 			<div class="reviews owl-carousel">
 				<div class="reviews__item">
 					<div class="top">
-						<p class="name"> Maria</p>
+						<p class="name"> María</p>
 						<div class="evalu">
 							<img src="img/evalu100.svg" alt>
 							<span> 5.0</span>
@@ -173,7 +173,7 @@
 					</div>
 					<img src="img/reviews1.jpg" alt>
 
-					<p class="comment"> Wstydziłam się uśmiechać z powodu krzywych zębów, ale nie miałam środków ani możliwości, by pójść do lekarza. Zdecydowałam się wypróbować Shiny Dentes i rezultat przerósł moje oczekiwania, nie mogę się nim nacieszyć, moje zęby wyglądają tak prosto i tak biało. Dziękuję bardzo! </p>
+					<p class="comment"> Me daba vergüenza sonreír a causa de los dientes torcidos, pero no había medios ni oportunidad de ir al médico. Decidí probar Shiny Dentes y el resultado superó todas mis expectativas, los dientes se ven tan uniformes y tan blancos. ¡Muchas gracias!</p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -184,7 +184,7 @@
 				</div>
 				<div class="reviews__item">
 					<div class="top">
-						<p class="name"> Janusz</p>
+						<p class="name"> Víctor</p>
 						<div class="evalu">
 							<img src="img/evalu90.svg" alt>
 							<span> 4.6</span>
@@ -192,7 +192,7 @@
 					</div>
 					<img src="img/reviews2.jpg" alt>
 
-					<p class="comment"> Przez lata miałem problemy z zębami i musiałem usunąć kilka zębów. Nienawidziłem tych szczelin, które zostawały mi po ekstrakcji. Ale nie było pieniędzy na implanty. Zobaczyłem w internecie licówki Shiny Dentes i postanowiłem je wypróbować, nie żałowałem ani przez sekundę, tak piękny uśmiech miałem pewnie przez 16 lat. Łatwo się je montuje, nie czuć ich w ustach, są bardzo cienkie, ale trwałe, nie ciemnieją, mimo że piję dużo kawy. Doskonały produkt!</p>
+					<p class="comment"> He tenido problemas dentales durante muchos años y me han tenido que sacar algunos dientes. Odiaba los huecos que quedaron después. Pero no había dinero para los implantes. En Internet vi las carillas Shiny Dentes y decidí probarlo, no me arrepiento ni un segundo, probablemente tuve una sonrisa tan hermosa hace unos 16 años atras. Son fáciles de instalar, no se siente en la boca, son muy delgadas, pero a la vez duraderas, no se oscurecen, aunque bebo mucho café. ¡Genial!</p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -203,15 +203,15 @@
 				</div>
 				<div class="reviews__item">
 					<div class="top">
-						<p class="name"> Barbara</p>
+						<p class="name"> Gabriela</p>
 						<div class="evalu">
 							<img src="img/evalu100.svg" alt>
-							<span> 5.0</span>
+							<span> 5</span>
 						</div>
 					</div>
 					<img src="img/reviews3.jpg" alt>
 
-					<p class="comment"> Używam ich od około miesiąca i nie zauważyłam żadnych problemów. Zamówiłam to, ponieważ mój uśmiech jest daleki od bieli i mam luki między przednimi zębami. Nic trudnego w dopasowaniu, żadnego dyskomfortu. Teraz częściej się uśmiecham i śmieję, podczas gdy wcześniej byłam zakłopotana. Podczas jedzenia, również, nie ma dyskomfortu, w rzeczywistości, w ciągu pięciu minut już zapominasz, że masz licówki. Polecam!</p>
+					<p class="comment"> He estado usandolas durante aproximadamente un mes, no he encontrado ningún problema. Las ordené porque mi sonrisa está lejos de ser perfecta, e incluso los espacios entre mis dientes frontales. No hay nada difícil en la instalación, no hay molestias al usar. Ahora sonrío a menudo, pero antes era tímida. Tampoco siento ninguna molestia a la hora de comer, de hecho, a los cinco minutos te olvidas de que tienes carillas puestas. ¡Aconsejo!</p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -223,17 +223,17 @@
 			</div>
 		</section>
 		<section class="sect8 ">
-			<h2 class="t-white t-center"> Jak złożyć zamówienie?</h2>
+			<h2 class="t-white t-center"> ¿Cómo hacer un pedido?</h2>
 			<br>
 			<div class="sect8__main">
 				<div class="item"><img src="img/sect7_1.png" alt>
-					<p> Prosimy o wypełnienie formularza zgłoszeniowego na stronie internetowej </p>
+					<p> Deje una solicitud en el sitio</p>
 				</div>
 				<div class="item"><img src="img/sect7_2.png" alt>
-					<p> Czekaj na telefon od menedżera </p>
+					<p> Espere la llamada del encargado</p>
 				</div>
 				<div class="item"><img src="img/sect7_3.png" alt>
-					<p> Płatność przy odbiorze</p></div>
+					<p> Pague la mercancía al recibir</p></div>
 				<div class="border"></div>
 			</div>
 			<br>
@@ -243,13 +243,13 @@
 	<footer class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Uniwersalne licówki zdejmowane</p>
+				<p class="subtitle"> Carillas desmontables universales</p>
 				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Idealny biały uśmiech za jednym pociągnięciem!</p>
-				<div class="price"> <b class="nev"> 221 zł</b>
-					<s class="old"> 442 zł</s>
+				<p class="text"> ¡Sonrisa blanca perfecta en un solo paso!</p>
+				<div class="price"> <b class="nev"> 49€</b>
+					<s class="old"> 98€</s>
 
 				</div>
 			</div>
@@ -264,27 +264,27 @@
 					<div class="separator">: </div>
 					<div class="t-sec"></div>
 				</div>
-				<div class="trigger"> Pozostała część zapasów na koniec promocji<b> 19 szt</b>
+				<div class="trigger"> Artículos en stock:<b> 19 pzs</b>
 				</div>
 			</div>
 		
 		<form id="offer" method="POST" class="form">
-			<input type="text" name="name" required placeholder="Imię ">
-			<input type="text" name="phone" required placeholder="Numer telefonu">
+			<input type="text" name="name" required placeholder="Nombre">
+			<input type="text" name="phone" required placeholder="Teléfono">
 <input name="offer_id" type="hidden" value="{offer_id}">
 <input name="geo" type="hidden" value>
 <input name="web_id" type="hidden" value="{web_id}">
 <input name="click_id" type="hidden" value="{click_id}">
 <input name="time_zone" type="hidden" value="+3">
 <input name="lang" type="hidden" value="RU">
-			<button class="btn"> Złoż zamówienie</button>
+			<button class="btn"> Ordenar</button>
 		</form>
 		
 	</footer>
 
 	<div class="policy__bot">
 		<div class="policy_wrap">
-			<span> BEAUT-E SHOP,  21, al. Jerozolimskie 85, Warszawa, Poland</span>
+			<span> BEAUT-E SHOP, Calle Juan de Dios, 10, 28015 Madrid, Spain</span>
 			<a href="/privacypolicy" target="_blank"> Privacy policy</a>
 			<a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>
 			<a href="/legal-warning" target="_blank"> Legal warning</a>
