--- a/OFFERS-338/hr/index.html
+++ b/OFFERS-338/hr/index.html
@@ -27,7 +27,7 @@
 			<div class="prod">
 				<p class="text"> Savršen bijeli osmijeh jednim potezom!</p>
 				<div class="price"> <b class="nev"> 368 kn</b>
-					<b class="old"> 736 kn</b>
+					<s class="old"> 736 kn</s>
 
 				</div>
 			</div>
@@ -249,7 +249,7 @@
 			<div class="prod">
 				<p class="text"> Savršen bijeli osmijeh jednim potezom!</p>
 				<div class="price"> <b class="nev"> 368 kn</b>
-					<b class="old"> 736 kn</b>
+					<s class="old"> 736 kn</s>
 
 				</div>
 			</div>
