--- a/OFFERS-338/pt/index.html
+++ b/OFFERS-338/pt/index.html
@@ -27,7 +27,7 @@
 			<div class="prod">
 				<p class="text"> O sorriso branco perfeito de uma só vez!</p>
 				<div class="price"> <b class="nev"> 49€</b>
-					<b class="old"> 98€</b>
+					<s class="old">98€</s>
 
 				</div>
 			</div>
@@ -249,7 +249,7 @@
 			<div class="prod">
 				<p class="text"> O sorriso branco perfeito de uma só vez!</p>
 				<div class="price"> <b class="nev"> 49€</b>
-					<b class="old"> 98€</b>
+					<s class="old">98€</s>
 
 				</div>
 			</div>
