--- a/OFFERS-338/ru/index.html
+++ b/OFFERS-338/ru/index.html
@@ -31,7 +31,7 @@
 			<div class="prod">
 				<p class="text">Идеальная белоснежная улыбка одним движением!</p>
 				<div class="price"> <b class="nev">49€</b>
-					<b class="old">98€</b>
+					<s class="old">98€</s>
 
 				</div>
 			</div>
@@ -278,7 +278,7 @@
 			<div class="prod">
 				<p class="text">Идеальная белоснежная улыбка одним движением!</p>
 				<div class="price"> <b class="nev">49€</b>
-					<b class="old">98€</b>
+					<s class="old">98€</s>
 
 				</div>
 			</div>
