--- a/OFFERS-338/it/index.html
+++ b/OFFERS-338/it/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
-	<title>Shiny Dentes</title>
+	<title>Shiny Dentes </title>
 <meta property="og:title" content="Shiny Dentes">
 <meta property="og:description" content="Универсальные съемные виниры">
 <meta property="og:image" content="https://i.imgur.com/jGPjVVk.png">
@@ -21,13 +21,13 @@
 	<header class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Fațete detașabile universale</p>
-				<h2 class="title"> Shiny Dentes</h2>
+				<p class="subtitle"> Faccette rimovibili universali </p>
+				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Zâmbet perfect alb într-o singură mișcare!</p>
-				<div class="price"> <b class="nev"> 235 lei</b>
-					<s class="old"> 470 lei</s>
+				<p class="text"> Un sorriso bianco perfetto in un solo colpo!</p>
+				<div class="price"> <b class="nev"> 49€</b>
+					<s class="old"> 98€</s>
 
 				</div>
 			</div>
@@ -35,131 +35,131 @@
 
 		<div class="list">
 			<div class="list__item">
-				<p> Subțiri și confortabile</p>
+				<p> Sottile e comoda</p>
 			</div>
 			<div class="list__item">
-				<p> Dimensiune universală</p>
+				<p> Dimensione universale</p>
 			</div>
 			<div class="list__item">
-				<p> Hipoalergenice</p>
+				<p> Ipoallergenici</p>
 			</div>
 			<div class="list__item">
-				<p> Fixare puternica</p>
+				<p> Fissaggio di lunga durata </p>
 			</div>
 		</div>
 		<br>
-		<a href="#offer" class="btn"> Comanda</a>
+		<a href="#offer" class="btn"> Ordina</a>
 		<br>
-		<div class="trigger"> Unități ramase la preț redus:<b> 19 buc</b>
+		<div class="trigger"> Il magazzino rimasti: <b> 19 pz.</b>
 		</div>
 		<br><br>
 	</header>
 
 	<main class="main">
 		<section class="sect1">
-			<h2 class=" sect-title"> Principalele avantaje<b> Shiny Dentes</b></h2>
+			<h2 class=" sect-title"> Principali vantaggi di<b> Shiny Dentes</b></h2>
 			<div class="sect1__item">
 				<img src="img/sect1-1.png" alt>
-				<p><b> Rezultat imediat</b> Îmbunătățește instantaneu aspectul dinților</p>
+				<p><b> Risultato immediato</b> Un miglioramento istantaneo dell'aspetto dei vostri denti</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-2.png" alt>
-				<p><b> Ușor de utilizat</b> Detașabile.</p>
+				<p><b> Semplice da usare</b> Indossateli e toglieteli quando volete.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-3.png" alt>
-				<p><b> Confortabil de purtat</b> Material stomatologic de înaltă tehnologie este incredibil de subțire, dar extrem de puternic și durabil.</p>
+				<p><b> Confortevoli da portare</b> Il materiale dentale high-tech è incredibilmente sottile, ma estremamente resistente e durevole. </p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-4.png" alt>
-				<p><b> Cost redus</b> Mai accesibil decât alte tratamente stomatologice.</p>
+				<p><b> Soluzione economica</b> Più accessibile di altre procedure cosmetiche.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-5.png" alt>
-				<p><b> Multi-funcționale</b> Mascați-vă imperfecțiunile, asa ca dinți neuniformi, așchii, fisuri, dinți rupți, carii și smalțul întunecat.</p>
+				<p><b> Multifunzionale</b> Nasconde le imperfezioni come denti irregolari, scheggiature, crepe, grandi spazi vuoti, carie e smalto scuro.</p>
 			</div>
 			<div class="sect1__item">
 				<img src="img/sect1-6.png" alt>
-				<p><b> Măsuri provizorii</b> Poate fi folosit ca dinți temporari în timpul implantării.</p>
+				<p><b> Soluzioni provvisorie</b> Possono essere usati come dentatura temporanea durante l'impianto.</p>
 			</div>
 		</section>
 
 		<section class="sect2">
-			<h2 class="sect-title"> Indicație la<b> aplicare</b></h2>
+			<h2 class="sect-title"> Indicazioni <b> d'uso </b></h2>
 			<div class="grid">
 				<div class="sect2__item">
 					<img src="img/sect2-1.png" alt>
-					<b> Smalțul dinților întunecați</b>
+					<b> Smalto scuro</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-2.png" alt>
-					<b> Dinți inegali</b>
+					<b> Denti irregolari</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-3.png" alt>
-					<b> Dinți de diferite înălțimi și forme</b>
+					<b> Denti di diverse altezze e forme</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-4.png" alt>
-					<b> Defecte de smalț: fisuri, găuri</b>
+					<b> Difetti dello smalto: crepe, giunti</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-5.png" alt>
-					<b> Spatii largi între dinți</b>
+					<b> Ampi spazi tra i denti</b>
 				</div>
 				<div class="sect2__item">
 					<img src="img/sect2-6.png" alt>
-					<b> Lipsește unul sau mai mulți dinți</b>
+					<b> Mancanza di uno o più denti</b>
 				</div>
 			</div>
 			<br>
 			<br>
-			<a href="#offer" class="btn"> Comanda</a>
+			<a href="#offer" class="btn"> Ordina</a>
 		</section>
 
 		<section class="sect3">
-			<h2 class="sect-title"> Caracteristici<b> Shiny Dentes</b></h2>
+			<h2 class="sect-title"> Caratteristiche <b> Shiny Dentes</b></h2>
 			<div class="sect3__main">
-				<p> Au o dimensiune universală</p>
-				<p> Nu se întuneca timp de multi ani</p>
-				<p> Se fixează ferm pe dinți</p>
-				<p> Nu provoca disconfort la utilizare</p>
+				<p> Hanno una dimensione universale</p>
+				<p> Non si scuriscono per diversi anni.</p>
+				<p> Fissaggio saldo ai denti</p>
+				<p> Nessun disagio durante l'uso</p>
 
 			</div>
 		</section>
 		<section class="sect4">
 			<br>
-			<h2 class="sect-title"> Fațete-aliniere<b> Shiny Dentes</b>
+			<h2 class="sect-title"> Faccette - eliner<b> Shiny Dentes</b>
 			</h2>
 			<img src="img/sect4.png" alt>
-			<p class="text"> Aceasta este o adevărată revoluție în stomatologia modernă!<b> Fațetele dentare detașabile vor readuce un aspect estetic și atractiv zâmbetului tău.</b> Acest produs este capabil să mascheze orice defecte externe: goluri dentare, fisuri, nereguli, smalțul  întunecat, găuri, curbură a rândului și malocluzie.<br> <br> Le puteți monta singuri, deoarece nu este necesar să efectuați șlefuirea preliminară sau alte manipulări.<b> În plus, instrumentul este aprobat de stomatologi moderni din diferite țări.</b> Când sunt purtate mult timp, fațetele ajută la formarea unei mușcături corecte și alinierea dinților.</p>
+			<p class="text"> È una vera rivoluzione nell'odontoiatria moderna! <b> Le faccette rimovibili Shiny Dentes riporteranno l'aspetto estetico e attraente del vostro sorriso.</b> Questo prodotto è in grado di mascherare qualsiasi difetto esterno: scheggiature, crepe, irregolarità, scurimenti, buchi, file storte e deformazioni. <br> <br> Si possono utilizzare direttamente, perché non c'è bisogno di effettuare una pre-macinazione o altre manipolazioni. <b> Inoltre, il prodotto è approvato dai moderni dentisti in diversi paesi.</b> Indossate per un lungo periodo, le faccette aiutano a formare un morso corretto e ad allineare i denti. </p>
 			<br> <br>
-			<a href="#offer" class="btn"> Comanda</a>
+			<a href="#offer" class="btn"> Ordina</a>
 			<br> <br>
 		</section>
 		<section class="sect5">
 			<br>
-			<h2 class="sect-title"> Cum să utilizați<b> Shiny Dentes</b>
+			<h2 class="sect-title"> Come utilizzare<b> Shiny Dentes</b>
 			</h2>
 			<br>
 			<div class="sect5__main">
 				<div class="sect5__item">
 					<img src="img/sect5_1.png" alt>
-					<p> Puneți dispozitivul de fixare (inclus) în apă fierbinte pentru 2 minute</p>
+					<p> Mettere il fissaggio (in dotazione) in acqua calda per 2 minuti</p>
 				</div>
 				<div class="sect5__item">
 					<img src="img/sect5_2.png" alt>
-					<p> Apăsați ferm dispozitivul de fixare pe dinți pentru a obține forma individuală a fațetei</p>
+					<p> Premere saldamente sui denti per ottenere un'impronta personalizzata</p>
 				</div>
 				<div class="sect5__item">
 					<img src="img/sect5_3.png" alt>
-					<p> Aplicați fațetele pe maxilar și bucurați-vă de zâmbetul perfect</p>
+					<p> Indossate le faccette e godetevi un sorriso perfetto</p>
 				</div>
 			</div>
 		</section>
 		<section class="sect6 ">
 			<br>
-			<h2 class="sect-title"> Recenzii<b> cumpărători</b></h2>
+			<h2 class="sect-title"> Recensioni <b> degli acquirenti</b></h2>
 			<br>
 			<br>
 			<div class="reviews owl-carousel">
@@ -173,7 +173,7 @@
 					</div>
 					<img src="img/reviews1.jpg" alt>
 
-					<p class="comment"> Mi-a fost rușine să zâmbesc din cauza dinților strâmbi, dar nu am avut mijloacele și oportunitatea de a merge la doctor. Am decis să încerc Shiny Dentes și rezultatul a depășit toate așteptările mele, nu mă pot opri să mă uit în oglinda, dinții arată atât de neted și atât de alb. Mulțumesc foarte mult!</p>
+					<p class="comment"> Provavo imbarazzo a sorridere a causa dei denti storti, ma non avevo i mezzi o l'opportunità di andare dal medico. Ho deciso di provare Shiny Dentes e il risultato ha superato le mie aspettative, i miei denti sembrano perfettamente dritti e bianchissimi. Grazie mille! </p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -184,7 +184,7 @@
 				</div>
 				<div class="reviews__item">
 					<div class="top">
-						<p class="name"> Victor</p>
+						<p class="name"> Pasquale</p>
 						<div class="evalu">
 							<img src="img/evalu90.svg" alt>
 							<span> 4.6</span>
@@ -192,7 +192,7 @@
 					</div>
 					<img src="img/reviews2.jpg" alt>
 
-					<p class="comment"> Am avut probleme dentare de ani de zile și nu reușeam sa scap de ele. Aveam și goluri care au rămas după extracție. Dar nu aveam bani pentru implanturi. Am văzut Shiny Dentes pe Internet și am decis să încerc, nu am regretat nicio secundă, probabil din cauza că asa zâmbet frumos nu am mai avut deja de vreo 16 ani. Este ușor de instalat, nu se simte în gură, foarte subțire, dar în același timp puternic, nu se întunecă, deși beau multă cafea. Produs excelent!</p>
+					<p class="comment"> Per anni ho avuto problemi ai denti e ho dovuto farmi togliere diversi denti. Odiavo i vuoti che mi sono rimasti dopo le estrazioni. Ma non avevo soldi per gli impianti. Ho visto le faccette Shiny Dentes su Internet e ho deciso di provarle, non me ne sono pentito nemmeno per un secondo, un sorriso così bello probabilmente non avevo da 16 anni. Sono facili da installare, non si sentono in bocca, molto sottili ma durevoli, non si scuriscono, anche se bevo molto caffè. Prodotto eccellente! </p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -203,7 +203,7 @@
 				</div>
 				<div class="reviews__item">
 					<div class="top">
-						<p class="name"> Olga</p>
+						<p class="name"> Anna</p>
 						<div class="evalu">
 							<img src="img/evalu100.svg" alt>
 							<span> 5.0</span>
@@ -211,7 +211,7 @@
 					</div>
 					<img src="img/reviews3.jpg" alt>
 
-					<p class="comment"> Le folosesc de aproximativ o lună și nu am găsit probleme. Am comandat-o pentru că zâmbetul meu este departe de a fi alb și am goluri la dinții din față. Nu este nimic complicat în instalare, nu există disconfort atunci când le purtați. Acum zâmbesc și râd mai des, deși eram timida. Când mănânc, de asemenea, nu simt nici un disconfort, de fapt, după cinci minute uitați că aveți fațete în gura. Va recomand!</p>
+					<p class="comment"> Sono circa un mese che li uso e non ho riscontrato alcun problema. Ho ordinato il prodotto perché il mio sorriso è tutt'altro che bianco e ho delle lacune tra i miei denti anteriori. Nessuna difficoltà di montaggio, nessun fastidio. Ora sorrido e rido più spesso, mentre prima provavo imbarazzo. Anche quando si mangia, nessun disagio, infatti, in cinque minuti si dimentica già di avere le faccette. Li raccomando!</p>
 					<div class="bottom">
 						<span></span>
 						<div class="like">
@@ -223,17 +223,17 @@
 			</div>
 		</section>
 		<section class="sect8 ">
-			<h2 class="t-white t-center"> Cum plasez o comandă?</h2>
+			<h2 class="t-white t-center"> Come ordinare? </h2>
 			<br>
 			<div class="sect8__main">
 				<div class="item"><img src="img/sect7_1.png" alt>
-					<p> Lăsați o solicitare pe site-ul web</p>
+					<p> Compilate il modulo di richiesta sul sito web </p>
 				</div>
 				<div class="item"><img src="img/sect7_2.png" alt>
-					<p> Așteptați ca managerul să va sune</p>
+					<p> Aspettate la chiamata di un responsabile </p>
 				</div>
 				<div class="item"><img src="img/sect7_3.png" alt>
-					<p> Plătiți  la primire</p></div>
+					<p> Pagate la merce al ricevimento </p></div>
 				<div class="border"></div>
 			</div>
 			<br>
@@ -243,13 +243,13 @@
 	<footer class="intro">
 		<div class="intro__header">
 			<div class="name">
-				<p class="subtitle"> Fațete detașabile universale</p>
-				<h2 class="title"> Shiny Dentes</h2>
+				<p class="subtitle"> Faccette rimovibili universali </p>
+				<h2 class="title"> Shiny Dentes </h2>
 			</div>
 			<div class="prod">
-				<p class="text"> Zâmbet perfect alb într-o singură mișcare!</p>
-				<div class="price"> <b class="nev"> 235 lei</b>
-					<s class="old"> 470 lei</s>
+				<p class="text"> Un sorriso bianco perfetto in un solo colpo!</p>
+				<div class="price"> <b class="nev"> 49€</b>
+					<s class="old"> 98€</s>
 
 				</div>
 			</div>
@@ -259,32 +259,32 @@
 
 				<div class="timer__wrapper">
 					<div class="t-hour"></div>
-					<div class="separator">:</div>
+					<div class="separator">: </div>
 					<div class="t-min"></div>
-					<div class="separator">:</div>
+					<div class="separator">: </div>
 					<div class="t-sec"></div>
 				</div>
-				<div class="trigger"> Unități ramase la preț redus:<b> 19 buc</b>
+				<div class="trigger"> Il magazzino rimasti: <b> 19 pz.</b>
 				</div>
 			</div>
 		
 		<form id="offer" method="POST" class="form">
-			<input type="text" name="name" required placeholder="Nume">
-			<input type="text" name="phone" required placeholder="Telefon">
+			<input type="text" name="name" required placeholder="Nome">
+			<input type="text" name="phone" required placeholder="Telefono">
 <input name="offer_id" type="hidden" value="{offer_id}">
 <input name="geo" type="hidden" value>
 <input name="web_id" type="hidden" value="{web_id}">
 <input name="click_id" type="hidden" value="{click_id}">
 <input name="time_zone" type="hidden" value="+3">
 <input name="lang" type="hidden" value="RU">
-			<button class="btn"> Comanda</button>
+			<button class="btn"> Ordina</button>
 		</form>
 		
 	</footer>
 
 	<div class="policy__bot">
 		<div class="policy_wrap">
-			<span> BEAUT-E SHOP,  Bulevardul Gloriei 15, București, Romania</span>
+			<span> BEAUT-E SHOP, Piazza Augusto Imperatore, 19, 00186 Roma RM, Italy</span>
 			<a href="/privacypolicy" target="_blank"> Privacy policy</a>
 			<a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>
 			<a href="/legal-warning" target="_blank"> Legal warning</a>
