--- a/OFFERS-343/es/index.html
+++ b/OFFERS-343/es/index.html
@@ -265,7 +265,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Francis<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-3.jpg"> Francis<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-12, true);
 								</script></span></strong></p>
@@ -273,7 +273,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Rey<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-81.jpg"> Rey<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-11, true);
 								</script></span></strong></p>
@@ -281,7 +281,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Mary Grace<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-8.jpg"> Mary Grace<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-10, true);
 								</script></span></strong></p>
@@ -289,7 +289,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Daniel<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-11.jpg"> Daniel<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-9, true);
 								</script></span></strong></p>
@@ -297,7 +297,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Christine<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-5.jpg"> Christine<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-8, true);
 								</script></span></strong></p>
@@ -305,7 +305,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> John<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/ava-13.jpg"> John<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-7, true);
 								</script></span></strong></p>
@@ -313,7 +313,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Angela<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/t_31.png"> Angela<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-6, true);
 								</script></span></strong></p>
@@ -321,7 +321,7 @@
 							</div>
 							<div class="comment-user">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Christopher<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/roderick.jpg"> Christopher<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-6, true);
 								</script></span></strong></p>
@@ -329,7 +329,7 @@
 							</div>
 							<div class="comment-user wap">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Brian<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/nelson.jpg"> Brian<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-5, true);
 								</script></span></strong></p>
@@ -337,7 +337,7 @@
 							</div>
 							<div class="comment-user wap">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Grace<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/kevin.jpg"> Grace<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-4, true);
 								</script></span></strong></p>
@@ -345,7 +345,7 @@
 							</div>
 							<div class="comment-user wap">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Juan<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/lyn.jpg"> Juan<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-3, true);
 								</script></span></strong></p>
@@ -353,7 +353,7 @@
 							</div>
 							<div class="comment-user wap" style="display: table;">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Joseph<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/t_2.png"> Joseph<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-3, true);
 								</script></span></strong></p>
@@ -361,7 +361,7 @@
 							</div>
 							<div class="comment-user wap">
 								<strong></strong>
-								<p class="user-name"><strong><img src="img/user_no_foto.jpg"> Nicole<span style="margin-left: 10px;">
+								<p class="user-name"><strong><img src="img/rose.jpg"> Nicole<span style="margin-left: 10px;">
 								<script>
 								     dtime_nums(-2, true);
 								</script></span></strong></p>
