--- a/OFFERS-338/cz/index.html
+++ b/OFFERS-338/cz/index.html
@@ -27,7 +27,7 @@
 			<div class="prod">
 				<p class="text"> Dokonalý bílý úsměv jedním pohybem!</p>
 				<div class="price"> <b class="nev"> 1340 Kč</b>
-					<b class="old"> 2680 Kč</b>
+					<s class="old"> 2680 Kč</s>
 
 				</div>
 			</div>
@@ -250,7 +250,7 @@
 			<div class="prod">
 				<p class="text"> Dokonalý bílý úsměv jedním pohybem!</p>
 				<div class="price"> <b class="nev"> 1340 Kč</b>
-					<b class="old"> 2680 Kč</b>
+					<s class="old"> 2680 Kč</s>
 
 				</div>
 			</div>
